# paracosm

./: .gitignore  Cargo.toml
assets/rust_shaders/: Cargo.toml  build.rs
assets/rust_shaders/src/: test.rs
assets/rust_shaders_shared/: Cargo.toml
assets/rust_shaders_shared/src/: lib.rs
assets/shaders/: entry_points.rs  frag.spv  rust_shaders.spv  test.spv  triangle.frag
crates/lib/paracosm_gpu/: Cargo.toml
crates/lib/paracosm_gpu/src/: device.rs  instance.rs  lib.rs
crates/lib/paracosm_gpu/src/resource/: allocator.rs  buffer.rs  image.rs  mod.rs  pipeline.rs  sampler.rs  shader.rs  shader_module.rs
crates/lib/paracosm_gpu/src/surface/: frame_data.rs  mod.rs  swapchain.rs
crates/lib/paracosm_obj/: Cargo.toml
crates/lib/paracosm_obj/src/: lib.rs  loader.rs
crates/lib/paracosm_render/: Cargo.toml  build.rs
crates/lib/paracosm_render/src/: lib.rs  render_asset.rs  window.rs
crates/lib/paracosm_render/src/image/: mod.rs
crates/lib/paracosm_render/src/mesh/: mod.rs
crates/lib/paracosm_render/src/raster/: mod.rs
crates/lib/paracosm_render/src/render_resource/: mod.rs  pipeline.rs  shader.rs
crates/lib/paracosm_render/src/renderer/: mod.rs
crates/lib/rust_shaders/: Cargo.toml
crates/lib/rust_shaders/src/: lib.rs  test.rs  test2.rs
crates/lib/rust_shaders/src/frag/: mod.rs  textured_lit.rs  unlit.rs
crates/lib/rust_shaders/src/vert/: mesh.rs
crates/lib/rust_shaders_shared/: Cargo.toml
crates/lib/rust_shaders_shared/src/: lib.rs  typed_buffer.rs
crates/paracosm_gpu/: Cargo.toml  README.md
crates/paracosm_gpu/macros/: Cargo.toml
crates/paracosm_gpu/macros/src/: frame_graph.rs  labels.rs  lib.rs
crates/paracosm_gpu/shader_builder/: Cargo.toml
crates/paracosm_gpu/shader_builder/src/: main.rs
crates/paracosm_gpu/src/: context.rs  device.rs  instance.rs  lib.rs  surface.rs  utils.rs  validation.rs
crates/paracosm_gpu/src/mesh/: mod.rs
crates/paracosm_gpu/src/mesh/mesh/: mod.rs
crates/paracosm_gpu/src/node/: interface.rs  mod.rs  resource.rs
crates/paracosm_gpu/src/pipeline/: compute.rs  graphics.rs  mod.rs
crates/paracosm_gpu/src/queue/: mod.rs
crates/paracosm_gpu/src/queue/commands/: compute.rs  graphics.rs  mod.rs  transfer.rs
crates/paracosm_gpu/src/raster/: mod.rs  pipeline.rs  renderer.rs
crates/paracosm_gpu/src/resource/: buffer.rs  image.rs  mod.rs  pipeline.rs  surface.rs
crates/paracosm_gpu/src/surface/: frame_data.rs  mod.rs  swapchain.rs
crates/paracosm_gpu/tests/: compute.rs  context.rs
crates/paracosm_gpu/tests/compute/shaders/: Cargo.toml
crates/paracosm_gpu/tests/compute/shaders/src/: lib.rs
crates/paracosm_obj/: Cargo.toml
crates/paracosm_obj/src/: lib.rs  loader.rs
crates/paracosm_render/: Cargo.toml
crates/paracosm_render/src/: lib.rs  window.rs
crates/paracosm_render/src/mesh/: mod.rs  vertex.rs
crates/paracosm_render/src/raster/: mod.rs
crates/paracosm_render/src/render_resource/: mod.rs
crates/paracosm_render/src/renderer/: mod.rs
examples/gpu/: basic_usage.rs
examples/gpu/game_of_life/: main.rs
examples/gpu/game_of_life/shaders/: Cargo.toml
examples/gpu/game_of_life/shaders/src/: lib.rs
examples/gpu/game_of_life/shared/: Cargo.toml
examples/gpu/game_of_life/shared/src/: lib.rs
examples/gpu/hello_compute/: main.rs
examples/gpu/hello_compute/shaders/: Cargo.toml
examples/gpu/hello_compute/shaders/src/: lib.rs
examples/gpu/hello_compute/shared/: Cargo.toml
examples/gpu/hello_compute/shared/src/: lib.rs
examples/gpu/hello_triangle/: main.rs
examples/gpu/hello_triangle/shaders/: Cargo.toml
examples/gpu/hello_triangle/shaders/src/: lib.rs
examples/gpu/hello_triangle/shared/: Cargo.toml
examples/gpu/hello_triangle/shared/src/: lib.rs
examples/paracosm_render/: test_example.rs
shaders/: colored_triangle.vert  compile_shaders.bat  triangle.frag  triangle.vert  vert.spv
