[workspace]
members = [
    "assets/rust_shaders",
    "assets/rust_shaders_shared",

    "crates/bin/test_example",

    "crates/lib/paracosm_gpu",
    "crates/lib/paracosm_render",
]

[workspace.package]
version = "0.1.0"
authors = ["Exsolutus <exsolutus.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""

[workspace.dependencies]
paracosm_gpu = { path = "crates/lib/paracosm_gpu" }
#paracosm_obj = { path = "crates/paracosm_obj" }
paracosm_render = { path = "crates/lib/paracosm_render" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
