[workspace]
members = [
    "crates/bin/test_example",

    "crates/lib/paracosm_gpu",
    "crates/lib/paracosm_obj",
    "crates/lib/paracosm_render",
    
    "crates/lib/rust_shaders",
    "crates/lib/rust_shaders_shared",
]
# exclude = [
#     "crates/lib/rust_shaders",
# ]

[workspace.package]
version = "0.1.0"
authors = ["Exsolutus <exsolutus.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""

[workspace.dependencies]
paracosm_gpu = { path = "crates/lib/paracosm_gpu" }
paracosm_obj = { path = "crates/lib/paracosm_obj" }
paracosm_render = { path = "crates/lib/paracosm_render" }
rust_shaders_shared = { path = "crates/lib/rust_shaders_shared" }

spirv-builder = "0.4.0"
spirv-std = { version = "0.4.0", features = ["glam"] }

[patch.crates-io]
rustc_codegen_spirv = { git = "https://github.com/LykenSol/rust-gpu", branch = "buffer-interface-block" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
