[workspace]
members = [
    "crates/paracosm_gpu",
    
    # Examples shader crates
    "examples/gpu/game_of_life/shaders",
    "examples/gpu/hello_compute/shaders",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Paracosm Engine Project"
authors = ["Exsolutus <exsolutus.dev@gmail.com>"]
repository = "https://github.com/Exsolutus/paracosm"

[package]
name = "paracosm"
version = "0.1.0"
license.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
exclude = ["crates/"]


[features]


[dependencies]
paracosm_gpu = { path = "crates/paracosm_gpu" }

[dev-dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_winit",
] }

hello_compute_shared = { path = "examples/gpu/hello_compute/shared" }
game_of_life_shared = { path = "examples/gpu/game_of_life/shared" }


[[example]]
name = "hello_compute"
path = "examples/gpu/hello_compute/main.rs"

[[example]]
name = "basic_usage"
path = "examples/gpu/basic_usage.rs"

[[example]]
name = "game_of_life"
path = "examples/gpu/game_of_life/main.rs"



# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"