[package]
name = "rust_shaders_shared"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
#macaw = { version = "0.17.2", default-features = false, features = ["libm"] }
#num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
spirv-std = { version = "0.4.0", features = ["glam"] }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
ash = { version = "0.37.1", features = ["linked"] }
