[package]
name = "paracosm_gpu"
version = "0.1.0"
publish = true
authors = ["Exsolutus <exsolutus.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""


[features]
default = []
WSI = ["ash-window", "raw-window-handle"]


[dependencies]
paracosm_gpu_macros = { path = "macros" }

anyhow = "1.0.95"
ash = { version = "0.38.0", features = ["linked"] }
bevy_ecs = "0.15.1"
bevy_utils = "0.15.1"
vk-mem = "0.4.0"

ash-window = { version = "0.13.0", optional = true }
raw-window-handle =  { version = "0.6.2", optional = true }
