[package]
name = "paracosm_gpu"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev"]
dev = []

[dependencies]
anyhow = "1.0.66"
ash = { version = "0.37.1", features = ["linked"] }
ash-window = { version = "0.12.0" }

# Bevy
bevy_app = { version = "0.9.0" }
bevy_asset = { version = "0.9.0" }
bevy_ecs = { version = "0.9.0" }
bevy_log = { version = "0.9.0" }
bevy_reflect = { version = "0.9.0", features = ["bevy"] }
bevy_window = { version = "0.9.0" }

gpu-allocator = "0.20.0"
nalgebra-glm = "0.17.0"
raw-window-handle = "0.3.4"