[package]
name = "paracosm_render"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev"]
dev = []

[dependencies]
anyhow = "1.0.66"
ash = { version = "0.37.1", features = ["linked"] }
ash-window = "0.12.0"

# Bevy
bevy_app = "0.9.0"
bevy_asset = "0.9.0"
bevy_core = "0.9.0"
bevy_derive = "0.9.0"
bevy_ecs = "0.9.0"
bevy_log = "0.9.0"
bevy_reflect = "0.9.0"
bevy_render_macros = "0.9.0"
bevy_time = "0.9.0"
bevy_utils = "0.9.0"
bevy_window = "0.9.0"

#nalgebra-glm = "0.17.0"
paracosm_gpu = { path = "../paracosm_gpu" }

rust_shaders_shared = { path = "../../../assets/rust_shaders_shared" }

spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }